--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ header nav a {
 }
 
 header nav a:hover {
-    color: #ffcc00; /* Hover effect */
+    color: #9c8dff; /* Hover effect */
     text-decoration: underline;
 }
 
